# A2-CE

./: Dockerfile.bonificador  Dockerfile.broker  Dockerfile.dash  Dockerfile.extract_db  Dockerfile.extract_txt  Dockerfile.historico  Dockerfile.loja  Dockerfile.monitor  Dockerfile.psql  Dockerfile.q1  Dockerfile.q2  Dockerfile.q3  Dockerfile.q4  Dockerfile.q5  Dockerfile.q6  Dockerfile.queue  Dockerfile.txt_behaviour  Dockerfile.web_gen  Dockerfile.webhook  README.md  amazon credentials.txt  build-dockers.sh  credentials  cupom_generator.py  dash.py  dashboard.py  docker-compose.yml  dummy_generator.py  ideals.txt  last_processed_id_db.json  mock_result.py  pyproject.toml  run-dockers.sh  webhook.sh
bonificador/: bonificador_AWS.py  cupom_generator.py  requirements_bonificador.txt
data/: Average_Products_Per_Minute.csv  Average_Revenue_Per_Minute.csv  Average_Unique_Users_Per_Product_Per_Minute.csv  Median_Views_Before_Purchase.csv  Most_Viewed_Products_Last_Hour.csv  Most_Viewed_Products_Per_Minute_Last_Hour.csv  Products_Purchased_Per_Minute.csv  Revenue_Per_Minute.csv  Stores.csv  Total_Excess_Sales.csv  Unique_User_Views_Per_Product_Per_Minute.csv  consumer.csv  order.csv  product.csv  stock.csv
json/: last_processed_id_log.json  last_processed_id_q1.json  last_processed_id_q3.json  last_processed_id_q4.json  last_processed_id_q5.json  last_processed_id_q6.json
mock/: historico.py  loja.py  loja_AWS.py  message.py  mock_utils.py  my_settings.py  requirements_mock.txt  txt_behaviour.py  user_class.py  web_behaviour.py  web_gen.py  webhook.py
src/: answer_q1.py  (+32 more)
(+11 files in other folders)
