[tool.poetry]
name = "a2-ce"
version = "0.1.0"
description = ""
authors = ["Vinícius Sousa <vinicius.antunes@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
celery = "^5.4.0"
redis-collections = "^0.13.0"
faker = "^25.8.0"
names = "^0.3.0"
psycopg2-binary = "^2.9.9"
flask = "^3.0.3"
requests = "^2.32.3"
streamlit = "^1.35.0"
plotly = "^5.22.0"
streamlit-aggrid = "^1.0.5"
aio-pika = "^9.4.1"
pika = "^1.3.2"
sorted = "^0.1.0"
containers = "^0.0.4"
sortedcontainers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
